bynkc/tests/fixtures/negative/344_oidc_missing_jwks/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Oidc(issuer = "https://issuer.example", audience = "my-api"), identity = UserId }
